@@ -97,11 +97,6 @@ bool benchmarks::run(dictionary< float, linkedlist< float > *> *stats) {
 		delete[] insertquery;
 	}
 
-	// commit
-	if (!con->commit()) {
-		stdoutput.printf("error committing\n");
-	}
-
 	// select
 	stdoutput.printf("  selecting...\n",rows,cols);
 	if (debug) {
@@ -112,6 +107,20 @@ bool benchmarks::run(dictionary< float, linkedlist< float > *> *stats) {
 					colsize,iterations,stats);
 	}
 
+	// connect and open
+	if (debug) {
+		stdoutput.printf("connecting\n");
+	}
+	if (!con->connect()) {
+		stdoutput.printf("error connecting\n");
+	}
+	if (debug) {
+		stdoutput.printf("opening\n");
+	}
+	if (!cur->open()) {
+		stdoutput.printf("error opening\n");
+	}
+
 	// drop
 	stdoutput.printf("  dropping table...\n");
 	if (debug) {
@@ -119,11 +128,6 @@ bool benchmarks::run(dictionary< float, linkedlist< float > *> *stats) {
 	}
 	if (!cur->query(dropquery,false)) {
 		stdoutput.printf("error dropping table\n");
-	}
-
-	// commit
-	if (!con->commit()) {
-		stdoutput.printf("error committing\n");
 	}
 
 	// close and disconnect
