@@ -39,7 +39,6 @@ class db2benchconnection : public benchconnection {
 
 		bool	connect();
 		bool	disconnect();
-		bool	commit();
 
 	private:
 		const char	*dbname;
@@ -135,11 +134,6 @@ bool db2benchconnection::disconnect() {
 	SQLFreeHandle(SQL_HANDLE_ENV,env);
 	return true;
 }
-
-bool db2benchconnection::commit() {
-	return (SQLEndTran(SQL_HANDLE_ENV,env,SQL_COMMIT)==SQL_SUCCESS);
-}
-
 
 db2benchcursor::db2benchcursor(benchconnection *con) : benchcursor(con) {
 	db2bcon=(db2benchconnection *)con;
