@@ -15,7 +15,6 @@ class freetdsbenchconnection : public benchconnection {
 
 		bool	connect();
 		bool	disconnect();
-		bool	commit();
 
 	private:
 		const char	*sybase;
@@ -77,11 +76,6 @@ bool freetdsbenchconnection::connect() {
 bool freetdsbenchconnection::disconnect() {
 	return true;
 }
-
-bool freetdsbenchconnection::commit() {
-	return true;
-}
-
 
 freetdsbenchcursor::freetdsbenchcursor(benchconnection *con) : benchcursor(con) {
 	ftdsbcon=(freetdsbenchconnection *)con;
