@@ -15,7 +15,6 @@ class sqlrelaybenchconnection : public benchconnection {
 
 		bool	connect();
 		bool	disconnect();
-		bool	commit();
 
 	private:
 		const char	*host;
@@ -83,10 +82,6 @@ bool sqlrelaybenchconnection::connect() {
 bool sqlrelaybenchconnection::disconnect() {
 	sqlrcon->endSession();
 	return true;
-}
-
-bool sqlrelaybenchconnection::commit() {
-	return sqlrcon->commit();
 }
 
 sqlrelaybenchcursor::sqlrelaybenchcursor(benchconnection *con) :
